--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Edinburgh Study Spots</title>
+<title>Edinburgh Study Spots!</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -15,7 +15,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()"
   class="w3-bar-item w3-button">Close Menu</a>
-  <a href="#Cafes" onclick="w3_close()" class="w3-bar-item w3-button">Cafes</a>
+  <a href="#Cafes" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
+
   <a href="#Add a review" onclick="w3_close()" class="w3-bar-item w3-button">Add a review</a>
 </nav>
 
