--- a/index.html
+++ b/index.html
@@ -32,29 +32,35 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
   <!-- First Photo Grid-->
-  <div class="w3-row-padding w3-padding-16 w3-center" id="food">
-    <div class="w3-quarter">
-      <img src="/w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
-      <h3>The Perfect Sandwich, A Real NYC Classic</h3>
-      <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+  -      <img src="/w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
+        <h3>The Perfect Sandwich, A Real NYC Classic</h3>
+        <img src="/brewlab.jpg" alt="Brew Lab" style="width:100%">
+        <h3>Brew Lab</h3>
+        <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      </div>
+      <div class="w3-quarter">
+        <img src="/w3images/steak.jpg" alt="Steak" style="width:100%">
+        <h3>Let Me Tell You About This Steak</h3>
+        <img src="/blackmedicinecoffee.jpg" alt="blackmedicinecofee" style="width:100%">
+        <h3>Black Medcine Coffee</h3>
+        <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      </div>
+      <div class="w3-quarter">
+        <img src="/w3images/cherries.jpg" alt="Cherries" style="width:100%">
+        <h3>Cherries, interrupted</h3>
+        <img src="/thenewamphion.jpg" alt="thenewamphion" style="width:100%">
+        <h3>Teviot's New Amphion</h3>
+        <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        <p>What else?</p>
+      </div>
+      <div class="w3-quarter">
+        <img src="/w3images/wine.jpg" alt="Pasta and Wine" style="width:100%">
+        <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+        <img src="/machinaespresso.jpg" alt="machinaespresso" style="width:100%">
+        <h3>Machina Espresso</h3>
+        <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      </div>
     </div>
-    <div class="w3-quarter">
-      <img src="/w3images/steak.jpg" alt="Steak" style="width:100%">
-      <h3>Let Me Tell You About This Steak</h3>
-      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-    <div class="w3-quarter">
-      <img src="/w3images/cherries.jpg" alt="Cherries" style="width:100%">
-      <h3>Cherries, interrupted</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-      <p>What else?</p>
-    </div>
-    <div class="w3-quarter">
-      <img src="/w3images/wine.jpg" alt="Pasta and Wine" style="width:100%">
-      <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-    </div>
-  </div>
 
 
 
