--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     </div>
     <div class="w3-quarter">
       <img src="/blackmedicinecoffee.jpg" alt="blackmedicinecofee" style="width:100%">
-      <h3>Black Medicine Coffee</h3>
+      <h3> <a href="https://www.blackmed.co.uk/"> Black Medicine Coffee </a> </h3>
 
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
