--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
-      <img src="/brewlab.jpg" alt="Brew Lab" style="width:100%">
+      <img src="./brewlab.jpg" alt="Brew Lab" style="width:100%">
     <h3>  <a href="https://www.brewlabcoffee.co.uk/"> Brew Lab </a> </h3>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
@@ -55,7 +55,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <p>  Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
-      <img src="/blackmedicinecoffee.jpg" alt="blackmedicinecofee" style="width:100%">
+      <img src="./blackmedicinecoffee.jpg" alt="blackmedicinecofee" style="width:100%">
       <h3>Black Medicine Coffee</h3>
 
         <span class="fa fa-star checked"></span>
@@ -66,7 +66,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <p>  Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
-      <img src="/thenewamphion.jpg" alt="thenewamphion" style="width:100%">
+      <img src="./thenewamphion.jpg" alt="thenewamphion" style="width:100%">
       <h3>Teviot's New Amphion</h3>
 
         <span class="fa fa-star checked"></span>
@@ -78,7 +78,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 
     </div>
     <div class="w3-quarter">
-      <img src="/machinaespresso.jpg" alt="machinaespresso" style="width:100%">
+      <img src="./machinaespresso.jpg" alt="machinaespresso" style="width:100%">
       <h3>Machina Espresso</h3>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
