--- a/index.html
+++ b/index.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
-<title>London Study Spots</title>
-=======
-<title>Edinburgh Study Spots!</title>
->>>>>>> 300cec42bee1438ae7ddb7d22a921655a6d14eb0
 <meta charset="UTF-8">
-src="http://code.jquery.com/jquery-3.3.1.min.js"
-integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-crossorigin="anonymous">
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
-<!-- Font Awesome Icon Library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 .w3-bar-block .w3-bar-item {padding:20px}
-.checked {color: gold;}
-</style>
-
 </style>
 <body>
 
@@ -39,7 +24,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
     <div class="w3-right w3-padding-16">Mail</div>
-    <div class="w3-center w3-padding-16">Study spots</div>
+    <div class="w3-center w3-padding-16">My Food</div>
   </div>
 </div>
 
@@ -49,52 +34,63 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
-      <img src="./brewlab.jpg" alt="Brew Lab" style="width:100%">
-    <h3>  <a href="https://www.brewlabcoffee.co.uk/"> Brew Lab </a> </h3>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-        <p>  Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <img src="/brewlab.jpg" alt="Brew Lab" style="width:100%">
+      <h3>Brew Lab!</h3>
+      <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
-      <img src="./blackmedicinecoffee.jpg" alt="blackmedicinecofee" style="width:100%">
-      <h3> <a href="https://www.blackmed.co.uk/"> Black Medicine Coffee </a> </h3>
-
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-        <p>  Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <img src="/blackmedicinecoffee.jpg" alt="blackmedicinecofee" style="width:100%">
+      <h3>Black Medcine Coffee</h3>
+      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
-      <img src="./thenewamphion.jpg" alt="thenewamphion" style="width:100%">
+      <img src="/thenewamphion.jpg" alt="thenewamphion" style="width:100%">
       <h3>Teviot's New Amphion</h3>
-
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-          <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-
+      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <p>What else?</p>
     </div>
     <div class="w3-quarter">
-      <img src="./machinaespresso.jpg" alt="machinaespresso" style="width:100%">
+      <img src="/machinaespresso.jpg" alt="machinaespresso" style="width:100%">
       <h3>Machina Espresso</h3>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-
-        <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
   </div>
 
+  <!-- Second Photo Grid-->
+  <div class="w3-row-padding w3-padding-16 w3-center">
+    <div class="w3-quarter">
+      <img src="/w3images/popsicle.jpg" alt="Popsicle" style="width:100%">
+      <h3>All I Need Is a Popsicle</h3>
+      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+    </div>
+    <div class="w3-quarter">
+      <img src="/w3images/salmon.jpg" alt="Salmon" style="width:100%">
+      <h3>Salmon For Your Skin</h3>
+      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+    </div>
+    <div class="w3-quarter">
+      <img src="/w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
+      <h3>The Perfect Sandwich, A Real Classic</h3>
+      <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+    </div>
+    <div class="w3-quarter">
+      <img src="/w3images/croissant.jpg" alt="Croissant" style="width:100%">
+      <h3>Le French</h3>
+      <p>Lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+    </div>
+  </div>
 
+  <!-- Pagination -->
+  <div class="w3-center w3-padding-32">
+    <div class="w3-bar">
+      <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
+      <a href="#" class="w3-bar-item w3-black w3-button">1</a>
+      <a href="#" class="w3-bar-item w3-button w3-hover-black">2</a>
+      <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
+      <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a>
+      <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
+    </div>
+  </div>
 
   <hr id="about">
 
