--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
     <div class="w3-right w3-padding-16">Mail</div>
-    <div class="w3-center w3-padding-16">Study spots</div>
+    <div class="w3-center w3-padding-16">Study Spots</div>
   </div>
 </div>
 
@@ -45,7 +45,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
-      <img src="./brewlab.jpg" alt="Brew Lab" style="width:100%">
+      <img src="./brewlab.jpg" alt="Brew Lab" style="width:100%; height:100%">
     <h3>  <a href="https://www.brewlabcoffee.co.uk/"> Brew Lab </a> </h3>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
