--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
       <img src="/brewlab.jpg" alt="Brew Lab" style="width:100%">
-      <h3>Brew Lab!</h3>
+      <h3>Brew Lab</h3>
       <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
