--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
-      <img src="./brewlab.jpg" alt="Brew Lab" style="width:100%; height:100%">
+      <img src="./brewlab.jpg" alt="Brew Lab" style="width:100%">
     <h3>  <a href="https://www.brewlabcoffee.co.uk/"> Brew Lab </a> </h3>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
