added about page

--- a/about.html
+++ b/about.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script
-  src="http://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-
+  <title>About...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
 </head>
 <body>
-  <h1>About</h1>
-  <p>
-    An ultimate guide to best revision spots around campus for when you get tired of the library.
-  </p>
 
+    <hr id="about">
+
+    <!-- About Section -->
+    <div class="w3-container w3-padding-32 w3-center">
+      <h3>About</h3><br>
+      <img src="./aboutcoffee.gif" alt="Me" class="w3-image" style="display:block;margin:auto" width="50%">
+      <div class="w3-padding-32">
+        <h4><b>...coffee?</b></h4>
+        <h6><i>Looking for a study spot? Look no further!</i></h6>
+        <p>This is an ultimate guide of the revision spots around campus (as reviewed by us and YOU) for when you get tired of studying in the library
+          </p>
+      </div>
+    </div>
+    <hr>
 </body>
 </html>
