--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Edinburgh Study Spots!</title>
 <meta charset="UTF-8">
-src="http://code.jquery.com/jquery-3.3.1.min.js"
+<src="http://code.jquery.com/jquery-3.3.1.min.js"
 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 crossorigin="anonymous">
 
@@ -18,14 +18,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 .checked {color: gold;}
 </style>
 
-</style>
 <body>
 
 <!-- Sidebar (hidden by default) -->
 <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()"
   class="w3-bar-item w3-button">Close Menu</a>
-  <a href="#Cafes" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
+  <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
 
   <a href="#Add a review" onclick="w3_close()" class="w3-bar-item w3-button">Add a review</a>
 </nav>
@@ -34,8 +33,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
-    <div class="w3-right w3-padding-16">Mail</div>
-    <div class="w3-center w3-padding-16">Study Spots</div>
+    <div class="w3-center w3-padding-16">Edinburgh Study Spots!</div>
   </div>
 </div>
 
@@ -90,21 +88,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     </div>
   </div>
 
-
-
-  <hr id="about">
-
-  <!-- About Section -->
-  <div class="w3-container w3-padding-32 w3-center">
-    <h3>About Me, The Food Man</h3><br>
-    <img src="/w3images/chef.jpg" alt="Me" class="w3-image" style="display:block;margin:auto" width="800" height="533">
-    <div class="w3-padding-32">
-      <h4><b>I am Who I Am!</b></h4>
-      <h6><i>With Passion For Real, Good Food</i></h6>
-      <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-    </div>
-  </div>
-  <hr>
 
   <!-- Footer -->
   <footer class="w3-row-padding w3-padding-32">
