--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       <div class="w3-padding-32">
         <h4><b>...coffee?</b></h4>
         <h6><i>Looking for a study spot? Look no further!</i></h6>
-        <p>This is an ultimate guide of the revision spots around campus (as reviewed by us and YOU) for when you get tired of studying in the library
+        <p>This is an ultimate guide to all the revision spots around campus (as reviewed by us and YOU) for when you get tired of studying in the library
           </p>
       </div>
     </div>
