--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     </div>
     <div class="w3-quarter">
       <img src="./thenewamphion.jpg" alt="thenewamphion" style="width:100%">
-      <h3>Teviot's New Amphion</h3>
+      <h3> <a href="https://www.eusa.ed.ac.uk/our_venues/teviot/the_new_amphion/"> Teviot's New Amphion </a> </h3>
 
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
@@ -77,7 +77,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     </div>
     <div class="w3-quarter">
       <img src="./machinaespresso.jpg" alt="machinaespresso" style="width:100%">
-      <h3>Machina Espresso</h3>
+      <h3> <a href="https://machina-coffee.co.uk/pages/coffee-shop"> Machina Espresso </a> </h3>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
