--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
-        <p>  Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        <p>  One of the coolest places to gather with your friends, grab a coffee and enjoy the healthy snacks.</p>
     </div>
     <div class="w3-quarter">
       <img src="./blackmedicinecoffee.jpg" alt="blackmedicinecofee" style="width:100%">
@@ -61,7 +61,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
-        <p>  Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        <p> Take your laptop and all your liabilities to Black Medicine, grab a coffee and sit infront of the window OR be there with your friends and enjoy the different taste of coffees..</p>
     </div>
     <div class="w3-quarter">
       <img src="./thenewamphion.jpg" alt="thenewamphion" style="width:100%">
@@ -72,7 +72,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
-          <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+          <p>Close to University of Edinburgh George Square campuss, best coffees, and always competing prices</p>
 
     </div>
     <div class="w3-quarter">
@@ -84,7 +84,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
 
-        <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+        <p> If you want to get rid off the daily stress and spend some time on cosy place, Machinaespresso is delivering all...</p>
     </div>
   </div>
 
