--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
         <p>  One of the coolest places to gather with your friends, grab a coffee and enjoy the healthy snacks.</p>
+      <ul>
+          <li> Pro </li>
+          <li> Pro </li>
+          <li> Con </li>
+          <li> Con </li>
+      </ul>
     </div>
     <div class="w3-quarter">
       <img src="./blackmedicinecoffee.jpg" alt="blackmedicinecofee" style="width:100%">
@@ -62,6 +68,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
         <p> Take your laptop and all your liabilities to Black Medicine, grab a coffee and sit infront of the window OR be there with your friends and enjoy the different taste of coffees..</p>
+        <ul>
+            <li> Pro </li>
+            <li> Pro </li>
+            <li> Con </li>
+            <li> Con </li>
+        </ul>
     </div>
     <div class="w3-quarter">
       <img src="./thenewamphion.jpg" alt="thenewamphion" style="width:100%">
@@ -73,6 +85,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
           <p>Close to University of Edinburgh George Square campuss, best coffees, and always competing prices</p>
+          <ul>
+              <li> Pro </li>
+              <li> Pro </li>
+              <li> Con </li>
+              <li> Con </li>
+          </ul>
 
     </div>
     <div class="w3-quarter">
@@ -85,6 +103,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
 
         <p> If you want to get rid off the daily stress and spend some time on cosy place, Machinaespresso is delivering all...</p>
+        <ul>
+            <li> Pro </li>
+            <li> Pro </li>
+            <li> Con </li>
+            <li> Con </li>
+        </ul>  
     </div>
   </div>
 
