Added thumbs up/thumbs down

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
         <p>  One of the coolest places to gather with your friends, grab a coffee and enjoy the healthy snacks.</p>
       <ul>
-          <li> Pro </li>
-          <li> Pro </li>
-          <li> Con </li>
-          <li> Con </li>
+          <li> &#x1f44d; Pro </li>
+          <li> &#x1f44d; Pro </li>
+          <li> &#x1F44E; Con </li>
+          <li> &#x1F44E; Con </li>
       </ul>
     </div>
     <div class="w3-quarter">
@@ -69,10 +69,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
         <p> Take your laptop and all your liabilities to Black Medicine, grab a coffee and sit infront of the window OR be there with your friends and enjoy the different taste of coffees..</p>
         <ul>
-            <li> Pro </li>
-            <li> Pro </li>
-            <li> Con </li>
-            <li> Con </li>
+            <li> &#x1f44d; Pro </li>
+            <li> &#x1f44d; Pro </li>
+            <li> &#x1F44E; Con </li>
+            <li> &#x1F44E; Con </li>
         </ul>
     </div>
     <div class="w3-quarter">
@@ -86,10 +86,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
           <p>Close to University of Edinburgh George Square campuss, best coffees, and always competing prices</p>
           <ul>
-              <li> Pro </li>
-              <li> Pro </li>
-              <li> Con </li>
-              <li> Con </li>
+              <li> &#x1f44d; Pro </li>
+              <li> &#x1f44d; Pro </li>
+              <li> &#x1F44E; Con </li>
+              <li> &#x1F44E; Con </li>
           </ul>
 
     </div>
@@ -104,11 +104,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 
         <p> If you want to get rid off the daily stress and spend some time on cosy place, Machinaespresso is delivering all...</p>
         <ul>
-            <li> Pro </li>
-            <li> Pro </li>
-            <li> Con </li>
-            <li> Con </li>
-        </ul>  
+            <li> &#x1f44d; Pro </li>
+            <li> &#x1f44d;Pro </li>
+            <li> &#x1F44E; Con </li>
+            <li> &#x1F44E; Con </li>
+        </ul>
     </div>
   </div>
 
