Removed bullet points

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
         <p>  One of the coolest places to gather with your friends, grab a coffee and enjoy the healthy snacks.</p>
-      <ul>
+      <ul style="list-style-type:none">
           <li> &#x1f44d; Pro </li>
           <li> &#x1f44d; Pro </li>
           <li> &#x1F44E; Con </li>
@@ -68,7 +68,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
         <p> Take your laptop and all your liabilities to Black Medicine, grab a coffee and sit infront of the window OR be there with your friends and enjoy the different taste of coffees..</p>
-        <ul>
+        <ul style="list-style-type:none">
             <li> &#x1f44d; Pro </li>
             <li> &#x1f44d; Pro </li>
             <li> &#x1F44E; Con </li>
@@ -85,7 +85,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
           <p>Close to University of Edinburgh George Square campuss, best coffees, and always competing prices</p>
-          <ul>
+          <ul style="list-style-type:none">
               <li> &#x1f44d; Pro </li>
               <li> &#x1f44d; Pro </li>
               <li> &#x1F44E; Con </li>
@@ -103,7 +103,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
 
         <p> If you want to get rid off the daily stress and spend some time on cosy place, Machinaespresso is delivering all...</p>
-        <ul>
+        <ul style="list-style-type:none">
             <li> &#x1f44d; Pro </li>
             <li> &#x1f44d;Pro </li>
             <li> &#x1F44E; Con </li>
