--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
-        <p>  One of the coolest places to gather with your friends, grab a coffee and enjoy the healthy snacks.</p>
+        <p>  One of the coolest places to study alone or for group projects... Gather with your friends, grab a coffee and enjoy the healthy snacks...</p>
       <ul style="list-style-type:none">
           <li> &#x1f44d; Pro </li>
           <li> &#x1f44d; Pro </li>
@@ -67,7 +67,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
-        <p> Take your laptop and all your liabilities to Black Medicine, grab a coffee and sit infront of the window OR be there with your friends and enjoy the different taste of coffees..</p>
+        <p> Take your laptop and all your liabilities to Black Medicine, grab a coffee and sit infront of the window OR be there with your friends and enjoy the different taste of coffees...</p>
         <ul style="list-style-type:none">
             <li> &#x1f44d; Pro </li>
             <li> &#x1f44d; Pro </li>
@@ -84,7 +84,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
-          <p>Close to University of Edinburgh George Square campuss, best coffees, and always competing prices</p>
+          <p>Close to University of Edinburgh George Square campuss, best coffees, and always competing prices with a bunch of study spots...</p>
           <ul style="list-style-type:none">
               <li> &#x1f44d; Pro </li>
               <li> &#x1f44d; Pro </li>
@@ -102,7 +102,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
 
-        <p> If you want to get rid off the daily stress and spend some time on cosy place, Machinaespresso is delivering all...</p>
+        <p> If you want to get rid off the daily stress and spend some time on cosy place,especially to read, answer mails and handle all other necessities of life... Machinaespresso is delivering all...</p>
         <ul style="list-style-type:none">
             <li> &#x1f44d; Pro </li>
             <li> &#x1f44d;Pro </li>
