--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <a href="javascript:void(0)" onclick="w3_close()"
-    class="w3-bar-item w3-button">Close Menu</a>
+    class="w3-bar-item w3-button">Return Home Page</a>
+    <link rel="stylesheet" href="file:///Users/ezgii/Desktop/coding_course/group_project/index.html">
   <title>About...</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
