--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- Footer -->
   <footer class="w3-row-padding w3-padding-32">
     <div class="w3-third">
-      <h3>FOOTER</h3>
-      <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+      <h3> Info </h3>
+      <p> Website designed by Ella Pullin, Laura Tokarska and Ezgi Kılınç </p>
+      <p> Created with the help of <a href= "https://www.codefirstgirls.org.uk/"> Coding First: Girls </a> and <a href= "https://www.w3schools.com/"> W3 Schools </a> </p>
+
     </div>
 
 
