--- a/Contact Form.html
+++ b/Contact Form.html
@@ -20,7 +20,8 @@
   <label for="email"> Email </label>
   <input type="text" name="email"><br>
   <h4> Send us an email! </h4>
-  <textarea cols="30" rows="10" placeholder="Enter a message here" </textarea><br>
+  <textarea cols="30" rows="10" placeholder="Enter a message here" </textarea>
+
   <input type="submit"
 </form>
 
