--- a/addareview.html
+++ b/addareview.html
@@ -3,7 +3,7 @@
 <head>
   <a href="javascript:void(0)" onclick="w3_close()"
     class="w3-bar-item w3-button">Return Home Page</a>
-  <title>Contact Form</title>
+  <title>Reviews</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
@@ -12,7 +12,7 @@
 <body>
 
 <form>
-  <h1> Contact Form </h1>
+  <h1>Add a review</h1>
   <label for="first-name"> First Name: </label>
   <input type="text" name="First-name"><br>
   <label for="last-name"> Last Name: </label>
@@ -21,7 +21,7 @@
   <input type="text" name="email"><br>
   <h4> Send us an email! </h4>
   <textarea cols="30" rows="10" placeholder="Enter a message here" </textarea><br>
-  <input type="submit"
+  <input type="submit">
 </form>
 
 </body>
