--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   class="w3-bar-item w3-button">Close Menu</a>
   <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
 
-  <a href="#Add a review" onclick="w3_close()" class="w3-bar-item w3-button">Add a review</a>
+  <a href="addareview.html" onclick="w3_close()" class="w3-bar-item w3-button">Add a review</a>
 </nav>
 
 <!-- Top menu -->
