--- a/Contact Form.html
+++ b/Contact Form.html
@@ -12,17 +12,19 @@
 <body>
 
 <form>
+  <fieldset>
   <h1> Add a Review!! </h1>
   <label for="first-name"> First Name: </label>
   <input type="text" name="First-name"><br>
   <label for="last-name"> Last Name: </label>
   <input type="text" name="Last-name"><br>
-  <label for="email"> Email </label>
+  <label for="email"> Email:</label>
   <input type="text" name="email"><br>
   <h4> Send us an email! </h4>
-  <textarea cols="30" rows="10" placeholder="Enter a message here" </textarea>
+  <textarea cols="30" rows="10" placeholder="Enter a message here"> </textarea> <br>
 
   <input type="submit"
+</fieldset>
 </form>
 
 </body>
