--- a/addareview.html
+++ b/addareview.html
@@ -10,19 +10,21 @@
 
 </head>
 <body>
+<div class="w3-container w3-padding-32 w3-center">
+  <form>
+    <h1>Add a review</h1>
+    <label for="first-name"> First Name: </label>
+    <input type="text" name="First-name"><br>
+    <label for="last-name"> Last Name: </label>
+    <input type="text" name="Last-name"><br>
+    <label for="email"> Email:</label>
+    <input type="text" name="email"><br>
+    <h4> Send us an email! </h4>
+    <textarea cols="30" rows="10" placeholder="Enter a message here"> </textarea>
+    <input type="submit">
+  </form>
+</div>
 
-<form>
-  <h1>Add a review</h1>
-  <label for="first-name"> First Name: </label>
-  <input type="text" name="First-name"><br>
-  <label for="last-name"> Last Name: </label>
-  <input type="text" name="Last-name"><br>
-  <label for="email"> Email:</label>
-  <input type="text" name="email"><br>
-  <h4> Send us an email! </h4>
-  <textarea cols="30" rows="10" placeholder="Enter a message here"> </textarea>
-  <input type="submit">
-</form>
 
 </body>
 </html>
