--- a/addareview.html
+++ b/addareview.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <a href="javascript:void(0)" onclick="w3_close()"
-    class="w3-bar-item w3-button">Return Home Page</a>
+  <a href="javascript:void(0)" onclick="w3_close()"</a>
+    <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
   <title>Reviews</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -10,9 +10,9 @@
 
 </head>
 <body>
-<div class="w3-container w3-padding-32 w3-center">
+<div class="w3-container w3-padding-32 w3-left">
   <form>
-    <h1>Add a review</h1>
+    <h1> Add a Review !! </h1>
     <label for="first-name"> First Name: </label>
     <input type="text" name="First-name"><br>
     <label for="last-name"> Last Name: </label>
