--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star"></span>
         <p>  One of the coolest places to study alone or for group projects... Gather with your friends, grab a coffee and enjoy the healthy snacks...</p>
       <ul style="list-style-type:none">
-          <li> &#x1f44d; Pro </li>
-          <li> &#x1f44d; Pro </li>
-          <li> &#x1F44E; Con </li>
-          <li> &#x1F44E; Con </li>
+          <li> &#x1f44d; Wi-Fi </li>
+          <li> &#x1f44d; big tables </li>
+          <li> &#x1F44E; expensive </li>
+          <li> &#x1F44E; busy on the weekdays </li>
       </ul>
     </div>
     <div class="w3-quarter">
@@ -64,15 +64,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
         <span class="fa fa-star"></span>
         <p> Take your laptop and all your liabilities to Black Medicine, grab a coffee and sit infront of the window OR be there with your friends and enjoy the different taste of coffees...</p>
         <ul style="list-style-type:none">
-            <li> &#x1f44d; Pro </li>
-            <li> &#x1f44d; Pro </li>
-            <li> &#x1F44E; Con </li>
-            <li> &#x1F44E; Con </li>
+            <li> &#x1f44d; coffee is good but pricey </li>
+            <li> &#x1f44d; quite cosy </li>
+            <li> &#x1F44E; uncomfortable seats </li>
+            <li> &#x1F44E; poor lighting </li>
         </ul>
     </div>
     <div class="w3-quarter">
@@ -82,14 +82,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
+        <span class="fa fa-star checked"></span>
         <span class="fa fa-star"></span>
           <p>Close to University of Edinburgh George Square campuss, best coffees, and always competing prices with a bunch of study spots...</p>
           <ul style="list-style-type:none">
-              <li> &#x1f44d; Pro </li>
-              <li> &#x1f44d; Pro </li>
-              <li> &#x1F44E; Con </li>
-              <li> &#x1F44E; Con </li>
+              <li> &#x1f44d; cheap </li>
+              <li> &#x1f44d; cosy </li>
+              <li> &#x1F44E; can be loud </li>
+              <li> &#x1F44E; poor coffee </li>
           </ul>
 
     </div>
@@ -104,10 +104,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 
         <p> If you want to get rid off the daily stress and spend some time on cosy place,especially to read, answer mails and handle all other necessities of life... Machinaespresso is delivering all...</p>
         <ul style="list-style-type:none">
-            <li> &#x1f44d; Pro </li>
-            <li> &#x1f44d;Pro </li>
-            <li> &#x1F44E; Con </li>
-            <li> &#x1F44E; Con </li>
+            <li> &#x1f44d; good coffee </li>
+            <li> &#x1f44d; cosy </li>
+            <li> &#x1F44E; small tables </li>
+            <li> &#x1F44E; quite busy </li>
         </ul>
     </div>
   </div>
