--- a/addareview.html
+++ b/addareview.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
 
+
+    <hr id="about">
+
+
 </head>
 <body>
 <div class="w3-container w3-padding-32 w3-left">
