--- a/about.html
+++ b/about.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <a href="javascript:void(0)" onclick="w3_close()"</a>
+
+<a href="javascript:void(0)" onclick="w3_close()"</a>
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
   <title>About...</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
 
+  <style>
+  body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
+  .w3-bar-block .w3-bar-item {padding:20px}
+  .checked {color: gold;}
+  </style>
+
 </head>
+
 <body>
 
     <hr id="about">
-
 
     <!-- About Section -->
     <div class="w3-container w3-padding-32 w3-center">
