--- a/index.html
+++ b/index.html
@@ -112,6 +112,79 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     </div>
   </div>
 
+    <!-- Second Photo Grid-->
+
+    <div class="w3-row-padding w3-padding-16 w3-center" id="food">
+      <div class="w3-quarter">
+        <img src="./thomasjwalls.jpg" alt="ThomasJ.Walls" style="width:100%">
+      <h3>  <a href="https://www.facebook.com/pages/Thomas-J-Walls/147270558642913"> Thomas J. Walls </a> </h3>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <p> </p>
+        <ul style="list-style-type:none">
+            <li> &#x1f44d; nice food menu </li>
+            <li> &#x1f44d; good tables </li>
+            <li> &#x1F44E; overpriced </li>
+            <li> &#x1F44E; No Wi-Fi </li>
+        </ul>
+      </div>
+      <div class="w3-quarter">
+        <img src="./levels.jpg" alt="levels" style="width:100%">
+        <h3> <a href="https://www.accom.ed.ac.uk/for-students/our-cafes/holyrood-road/"> Levels </a> </h3>
+
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+          <p> </p>
+          <ul style="list-style-type:none">
+              <li> &#x1f44d; low prices </li>
+              <li> &#x1f44d; modern decor</li>
+              <li> &#x1F44E; busy during lunch time </li>
+              <li> &#x1F44E; poor lighting </li>
+          </ul>
+      </div>
+      <div class="w3-quarter">
+        <img src="./lovecrumbs.webp" alt="lovecrumbs" style="width:100%">
+        <h3> <a href="http://www.lovecrumbs.co.uk/"> Love Crumbs </a> </h3>
+
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+            <p>For all those cake lovers</p>
+            <ul style="list-style-type:none">
+                <li> &#x1f44d; great cakes </li>
+                <li> &#x1f44d; pretty interior </li>
+                <li> &#x1F44E; can be busy </li>
+                <li> &#x1F44E; tables not the biggest </li>
+            </ul>
+
+      </div>
+      <div class="w3-quarter">
+        <img src="./soderberg.jpg" alt="soderberg" style="width:100%">
+        <h3> <a href="http://www.soderberg.uk/soderberg-pavilion"> Söderberg Pavilion </a> </h3>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+
+          <p> </p>
+          <ul style="list-style-type:none">
+              <li> &#x1f44d; good coffee </li>
+              <li> &#x1f44d; cosy, Scandinavian decor </li>
+              <li> &#x1F44E; busy during lunch time </li>
+              <li> &#x1F44E; can be loud </li>
+          </ul>
+      </div>
+    </div>
+
 
   <!-- Footer -->
   <footer class="w3-row-padding w3-padding-32">
