--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Edinburgh Study Spots!</title>
+<title>Edinburgh coffee Spots!</title>
 <meta charset="UTF-8">
 <src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -123,7 +123,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
           <span class="fa fa-star"></span>
           <span class="fa fa-star"></span>
           <span class="fa fa-star"></span>
-          <p> </p>
+          <p> Great coffee and a fab aumbience. A nice spot for lunch with friends but less ideal for studiyng </p>
         <ul style="list-style-type:none">
             <li> &#x1f44d; nice food menu </li>
             <li> &#x1f44d; good tables </li>
@@ -135,12 +135,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <img src="./levels.jpg" alt="levels" style="width:100%">
         <h3> <a href="https://www.accom.ed.ac.uk/for-students/our-cafes/holyrood-road/"> Levels </a> </h3>
 
+
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star"></span>
-          <p> </p>
+          <p> A great place for an afternoon coffee or one of your more social meetings. The lunch is delicious, but everyone knows it so get there nice and early! </p>
           <ul style="list-style-type:none">
               <li> &#x1f44d; low prices </li>
               <li> &#x1f44d; modern decor</li>
@@ -157,7 +158,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
-            <p>For all those cake lovers</p>
+            <p>For all those cake lovers. A sweet spot for the occasional treat</p>
             <ul style="list-style-type:none">
                 <li> &#x1f44d; great cakes </li>
                 <li> &#x1f44d; pretty interior </li>
@@ -175,7 +176,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
           <span class="fa fa-star"></span>
           <span class="fa fa-star"></span>
 
-          <p> </p>
+          <p> Engrose yourself in a Scandanavian cafe and enjoy the boho vibe </p>
           <ul style="list-style-type:none">
               <li> &#x1f44d; good coffee </li>
               <li> &#x1f44d; cosy, Scandinavian decor </li>
