--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
 <!-- Font Awesome Icon Library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
-.w3-bar-block .w3-bar-item {padding:20px}
-.checked {color: gold;}
-</style>
+<link rel="stylesheet" type="text/css" href="css/styles.css">
 
 <body>
 
@@ -41,7 +36,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
   <!-- First Photo Grid-->
-  <div class="w3-row-padding w3-padding-16 w3-center" id="food">
+  <div class="w3-row-padding w3-padding-16 w3-center" id="main-cafes">
     <div class="w3-quarter">
       <img src="./brewlab.jpg" alt="Brew Lab" style="width:100%">
     <h3>  <a href="https://www.brewlabcoffee.co.uk/"> Brew Lab </a> </h3>
