--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
           <span class="fa fa-star"></span>
           <span class="fa fa-star"></span>
           <span class="fa fa-star"></span>
-          <p> Great coffee and a fab aumbience. A nice spot for lunch with friends but less ideal for studiyng </p>
+          <p> Great coffee and a fab aumbience. A nice spot for lunch with friends but less ideal for studiyng... </p>
         <ul style="list-style-type:none">
             <li> &#x1f44d; nice food menu </li>
             <li> &#x1f44d; good tables </li>
@@ -141,7 +141,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star"></span>
-          <p> A great place for an afternoon coffee or one of your more social meetings. The lunch is delicious, but everyone knows it so get there nice and early! </p>
+          <p> A great place for an afternoon coffee or one of your more social meetings. The lunch is delicious, but everyone knows it so get there nice and early... </p>
           <ul style="list-style-type:none">
               <li> &#x1f44d; low prices </li>
               <li> &#x1f44d; modern decor</li>
@@ -158,7 +158,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
-            <p>For all those cake lovers. A sweet spot for the occasional treat</p>
+            <p>For all those cake lovers. A sweet spot for the occasional treat...</p>
             <ul style="list-style-type:none">
                 <li> &#x1f44d; great cakes </li>
                 <li> &#x1f44d; pretty interior </li>
@@ -176,7 +176,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
           <span class="fa fa-star"></span>
           <span class="fa fa-star"></span>
 
-          <p> Engrose yourself in a Scandanavian cafe and enjoy the boho vibe </p>
+          <p> Engrose yourself in a Scandanavian cafe and enjoy the boho vibe... </p>
           <ul style="list-style-type:none">
               <li> &#x1f44d; good coffee </li>
               <li> &#x1f44d; cosy, Scandinavian decor </li>
