--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="main-cafes">
     <div class="w3-quarter">
-      <img src="./brewlab.jpg" alt="Brew Lab" style="width:100%">
+      <img src="./images/brewlab.jpg" alt="Brew Lab" style="width:100%">
     <h3>  <a href="https://www.brewlabcoffee.co.uk/"> Brew Lab </a> </h3>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
@@ -54,7 +54,7 @@
       </ul>
     </div>
     <div class="w3-quarter">
-      <img src="./blackmedicinecoffee.jpg" alt="blackmedicinecofee" style="width:100%">
+      <img src="./images/blackmedicinecoffee.jpg" alt="blackmedicinecofee" style="width:100%">
       <h3> <a href="https://www.blackmed.co.uk/"> Black Medicine Coffee </a> </h3>
 
         <span class="fa fa-star checked"></span>
@@ -71,7 +71,7 @@
         </ul>
     </div>
     <div class="w3-quarter">
-      <img src="./thenewamphion.jpg" alt="thenewamphion" style="width:100%">
+      <img src="./images/thenewamphion.jpg" alt="thenewamphion" style="width:100%">
       <h3> <a href="https://www.eusa.ed.ac.uk/our_venues/teviot/the_new_amphion/"> Teviot's New Amphion </a> </h3>
 
         <span class="fa fa-star checked"></span>
@@ -89,7 +89,7 @@
 
     </div>
     <div class="w3-quarter">
-      <img src="./machinaespresso.jpg" alt="machinaespresso" style="width:100%">
+      <img src="./images/machinaespresso.jpg" alt="machinaespresso" style="width:100%">
       <h3> <a href="https://machina-coffee.co.uk/pages/coffee-shop"> Machina Espresso </a> </h3>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
@@ -111,7 +111,7 @@
 
     <div class="w3-row-padding w3-padding-16 w3-center" id="food">
       <div class="w3-quarter">
-        <img src="./thomasjwalls.jpg" alt="ThomasJ.Walls" style="width:100%">
+        <img src="./images/thomasjwalls.jpg" alt="ThomasJ.Walls" style="width:100%">
       <h3>  <a href="https://www.facebook.com/pages/Thomas-J-Walls/147270558642913"> Thomas J. Walls </a> </h3>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
@@ -127,7 +127,7 @@
         </ul>
       </div>
       <div class="w3-quarter">
-        <img src="./levels.jpg" alt="levels" style="width:100%">
+        <img src="./images/levels.jpg" alt="levels" style="width:100%">
         <h3> <a href="https://www.accom.ed.ac.uk/for-students/our-cafes/holyrood-road/"> Levels </a> </h3>
 
 
@@ -145,7 +145,7 @@
           </ul>
       </div>
       <div class="w3-quarter">
-        <img src="./lovecrumbs.webp" alt="lovecrumbs" style="width:100%">
+        <img src="./images/lovecrumbs.webp" alt="lovecrumbs" style="width:100%">
         <h3> <a href="http://www.lovecrumbs.co.uk/"> Love Crumbs </a> </h3>
 
           <span class="fa fa-star checked"></span>
@@ -163,7 +163,7 @@
 
       </div>
       <div class="w3-quarter">
-        <img src="./soderberg.jpg" alt="soderberg" style="width:100%">
+        <img src="./images/soderberg.jpg" alt="soderberg" style="width:100%">
         <h3> <a href="http://www.soderberg.uk/soderberg-pavilion"> Söderberg Pavilion </a> </h3>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
