--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <!-- About Section -->
     <div class="w3-container w3-padding-32 w3-center">
       <h3>About</h3><br>
-      <img src="./aboutcoffee.gif" alt="Me" class="w3-image" style="display:block;margin:auto" width="50%">
+      <img src="./images/aboutcoffee.gif" alt="Me" class="w3-image" style="display:block;margin:auto" width="50%">
       <div class="w3-padding-32">
         <h4><b>...coffee?</b></h4>
         <h6><i>Looking for a study spot? Look no further!</i></h6>
